--- a/src/app/view/Login.fxml
+++ b/src/app/view/Login.fxml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<VBox spacing="4.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.Login">
+<AnchorPane prefHeight="256.0" prefWidth="384.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.Login">
    <children>
-      <Label text="ID" />
-      <TextField fx:id="userIdField" />
-      <Label text="Password" />
-      <PasswordField fx:id="userPasswordField" />
-      <Label fx:id="errorLabel" />
-      <HBox spacing="8.0">
+      <GridPane layoutX="51.0" layoutY="74.0" prefHeight="148.0" prefWidth="284.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="40.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="192.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints />
+        </rowConstraints>
          <children>
-            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#action_cancelButton" prefWidth="96.0" text="Cancel" />
-            <Button fx:id="okButton" mnemonicParsing="false" onAction="#action_okButton" prefWidth="96.0" text="OK" />
+             <Label text="ID" />
+             <TextField fx:id="userIdField" GridPane.columnIndex="1" />
+             <Label text="Password" GridPane.rowIndex="1" />
+             <PasswordField fx:id="userPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+             <Label fx:id="errorLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+             <Button fx:id="okButton" mnemonicParsing="false" onAction="#action_okButton" prefWidth="363.0" text="Entrar" GridPane.columnSpan="2" GridPane.rowIndex="3" />
          </children>
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
-      </HBox>
+      </GridPane>
+      <Label id="title" layoutX="137.0" layoutY="26.0" text="Livro de Protocolo" />
+      <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="62.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../img/book.png" />
+         </image>
+      </ImageView>
    </children>
-   <padding>
-      <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-   </padding>
-</VBox>
+</AnchorPane>
