--- a/src/app/view/ProtocolTypeView.fxml
+++ b/src/app/view/ProtocolTypeView.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox prefHeight="384.0" prefWidth="512.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ProtocolTypeView">
@@ -25,7 +24,8 @@
                         <Image url="@../../img/save.png" />
                      </image>
                   </ImageView>
-               </graphic></Button>
+               </graphic>
+            </Button>
             <Button fx:id="buttonDel" mnemonicParsing="false" onAction="#actionDel">
                <graphic>
                   <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
@@ -33,39 +33,40 @@
                         <Image url="@../../img/del.png" />
                      </image>
                   </ImageView>
-               </graphic></Button>
+               </graphic>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#actionClear">
+               <graphic>
+                  <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/erase.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
         </items>
       </ToolBar>
-      <GridPane hgap="4.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.0" minWidth="10.0" prefWidth="75.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="10.0" prefWidth="271.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="10.0" prefWidth="99.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Número" />
-            <Label text="Descrição" GridPane.columnIndex="1" />
-            <TextField fx:id="textfieldId" editable="false" GridPane.rowIndex="1" />
-            <TextField fx:id="textfieldDesc" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-         </VBox.margin>
-      </GridPane>
-      <TableView fx:id="tableviewType" onMouseClicked="#actionEdit" prefHeight="300.0" prefWidth="504.0">
-        <columns>
-          <TableColumn fx:id="colId" prefWidth="75.0" text="Numero" />
-          <TableColumn fx:id="colDesc" prefWidth="314.0" text="Descrição" />
-        </columns>
-         <VBox.margin>
-            <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-         </VBox.margin>
-      </TableView>
+      <TitledPane animated="false" text="Dados">
+         <content>
+            <HBox prefHeight="0.0" prefWidth="494.0" styleClass="HBox">
+               <children>
+                  <Label text="Número" />
+                  <TextField fx:id="textfieldId" editable="false" prefHeight="24.0" prefWidth="76.0" />
+                  <Label text="Descrição" />
+                  <TextField fx:id="textfieldDesc" prefHeight="24.0" prefWidth="264.0" />
+               </children>
+            </HBox>
+         </content>
+      </TitledPane>
+      <TitledPane prefHeight="258.0" prefWidth="512.0" text="Lista">
+         <content>
+            <TableView fx:id="tableviewType" onMouseClicked="#actionEdit" prefHeight="246.0" prefWidth="494.0">
+              <columns>
+                <TableColumn fx:id="colDesc" prefWidth="314.0" text="Descrição" />
+              </columns>
+            </TableView>
+         </content>
+      </TitledPane>
    </children>
    <VBox.margin>
       <Insets />
