--- a/src/app/view/ProtocolTypeView.fxml
+++ b/src/app/view/ProtocolTypeView.fxml
@@ -44,6 +44,15 @@
                   </ImageView>
                </graphic>
             </Button>
+           <Button mnemonicParsing="false" onAction="#actionCancel">
+              <graphic>
+                 <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                       <Image url="@../../img/back.png" />
+                    </image>
+                 </ImageView>
+              </graphic>
+           </Button>
         </items>
       </ToolBar>
       <TitledPane animated="false" text="Dados">
