--- a/src/app/view/style.css
+++ b/src/app/view/style.css
@@ -12,6 +12,9 @@ GridPane {
 TitledPane {
     -fx-padding: 8 8 0 8;
 }
+TitledPane > .title {
+    -fx-font-weight: bold;
+}
 
 .button {
     -fx-pref-height: 32px;
@@ -25,8 +28,4 @@ TitledPane {
     -fx-background-color: #b0c4de;
     -fx-background-radius: 2;
     -fx-background-insets: 0, 1;
-}
-#text-field-id:selected {
-    -fx-border-width: 1;
-    -fx-border-color: blue;
 }
